2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (quiesce): New function.
	(grub_ofdisk_fini): Quiesce USB devices.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/powerpc/ieee1275/linux.c (grub_linux_boot): Sync
	caches.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_crc): Use grub_get_unaligned32 for safety.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/pata.c (grub_pata_pio_read)
	[GRUB_MACHINE_MIPS_QEMU_MIPS]: Don't byteswap even on mipseb.
	(grub_pata_pio_write) [GRUB_MACHINE_MIPS_QEMU_MIPS]: Likewise.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	Extend automated tests to qemu-mips.

	* Makefile.am: reorganise tests and enable qemu-mips.
	* configure.ac (COND_mipseb), (COND_mipsel): New conditions.
	* grub-core/tests/boot/linux.init-mips.S: New file.
	* tests/partmap_test.in: Handle ata0 disks.
	* tests/util/grub-shell.in: Handle qemu-mips. Make defaults work on
	non-pc i386.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.util.def (grub-mkrescue) Anable on mips_qemu_mips and
	ia64.
	* util/grub-mkrescue.in: Handle qemu-mips and ia64. Add missing
	quotes while on it.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/qemu_mips/init.c (grub_exit): Implement.
	(grub_halt): Likewise.
	* grub-core/lib/mips/qemu_mips/reboot.c (grub_reboot): Likewise.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/serial.c (grub_serial_register)
	[GRUB_MACHINE_MIPS_QEMU_MIPS]: Don't autostart console in order to bring
	the behaviour in line with x86 platforms.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hdparm.c (le16_to_char): Always byte-swap strings.
	(grub_ata_strncpy): Likewise.
	(grub_ata_identify): Add missing byteswaps.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>
